fix component collapse only one now

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -67,4 +67,16 @@
         width: 54%;
     }
   }
+  
+}
+@keyframes imgAnimation {
+  from {
+    transform: translateX(0px);
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(300px);
+  }
 }
